Fixed wrong font-weight

--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -187,7 +187,7 @@ a {
 
 		&--semibold {
 			font-size: $p5-font-size;
-			font-weight: 500;
+			font-weight: 600;
 		}
 
 		&--SEMIBOLD {
